src/components/LoginHeader.css
/*
 * Copyright 2017 data.world, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This product includes software developed at
 * data.world, Inc. (http://data.world/).
 */
.login-header {
  background-color: #335c8c;
  height: 50px;
  color: #fff;
  display: flex;
  align-items: center;
  padding: 5px 10px;
}

.login-header .title {
  font-size: 18px;
}

.login-header img {
  height: 40px;
  width: 40px;
  background-color: #9ec8ee;
  border-radius: 50%;
  padding-top: 3px;
  margin-right: 10px;
}

.login-header .dropdown {
  margin-left: auto;
}

.login-header .dropdown.btn-group button {
  border: none;
  box-shadow: none;
  padding: 0;
  line-height: 1;
  height: auto;
  font-size: 16px;
  color: #fff !important;
  background-image: none;
}

